<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/bg_login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="55"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/spotlight"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/set_password"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_weight="15" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_gravity="center_horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/set_login"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/textView3" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="10"
            android:ems="10"
            android:id="@+id/insertLogin"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/senha"
            android:id="@+id/textView4" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="8"
            android:ems="10"
            android:id="@+id/insertPassword"
            android:layout_weight="1" />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:paddingBottom="20dp"
        android:layout_gravity="center_horizontal">


        <Space
            android:layout_width="0dp"
            android:layout_weight="60"
            android:layout_height="match_parent" />

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/salvar_senha"
            android:textColor="@color/gray"
            android:paddingLeft="10dp"
            android:id="@+id/checkBox"
            android:layout_weight="40"
            android:checked="false" />
    </LinearLayout>



    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/abc_action_mode_done"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/action_button"
        android:layout_gravity="center_horizontal"
        android:onClick="onDoneRequest"/>

</LinearLayout>