<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:id="@+id/textView54"
        android:layout_gravity="center_horizontal"
        android:layout_weight="10">


        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:padding="5dp"
            android:id="@+id/imageButton2"
            android:src="@drawable/ic_arrow_back_white_36dp"
            android:onClick="goBack"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="90"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/sos_title"
            android:id="@+id/textView9" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Bruna Daniele Andrade"
            android:id="@+id/sosoNameTxt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Santa Helena"
            android:id="@+id/insuranceNameTxt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Santa Casa"
            android:id="@+id/textView15"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:textColor="@color/colorPrimary"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tel_contact"
            android:id="@+id/textView17"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:text="Telefone Residencial"
            android:id="@+id/button5"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:text="Celular do responsável"
            android:id="@+id/button6"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tel_sos"
            android:textColor="@color/colorPrimary"
            android:id="@+id/textView18"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textColor="@color/white"
                android:text="@string/tel_samu"
                android:id="@+id/button10"
                android:layout_gravity="center_horizontal"
                android:onClick="onCallSamu"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textColor="@color/white"
                android:text="@string/tel_pol"
                android:id="@+id/button11"
                android:layout_gravity="center_horizontal"
                android:onClick="onCallPol"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>